# LinguisticMutator

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  main.cpp  mutator.cpp  mutator.hpp
data/: rechercheDuTempsPerdu.txt
include/: mutator.hpp
src/: CMakeLists.txt
src/executables/: main.cpp
src/lib/: mutator.cpp
